# iot-repo-1

./: README.md  arduino1_Form.ino
Care/CareService/: CareService.py  CareService.ui
Home/DoorManager/: DoorManager.ino
Home/HomeIOManager/: HomeIOManager.ino  dataSave.py
Home/HomeService/: HomeService.py  HomeService.ui
Lrobot/: setup.cfg  setup.py
Lrobot/Lrobot/: poses.json  robot_control.py
robot_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_control/launch/: lrobot_control.launch.py
robot_control/robot_control/: Lrobot.py  Lrobot_code.py  Lrobot_control.py  Lrobot_made_code.py  Lrobot_test.py  Robot_Driving.py  Robot_Service.py  Robot_Topic.py  robot_astar1.py  robot_control_ui.py  routes.py  test.ipynb
source/: Home_controller.ino  Smarthome_F4.py  Smarthome_F4.ui  care_pc1.ino  care_pc1.py  care_pc1.ui  care_pc2.ino  care_pc2.py  care_service.py  care_service.ui  dataSave.py  home_project2.ino  one_person.ino  one_person.py  one_person.ui  smart_home_function1.ino  smarthome_F3_yohankim.ino  smarthome_F4.ino  smarthome_F4.py  smarthome_F4.ui
